Remove overflow hidden, as this was causing a clipping bug when the window was made smaller and then larger

--- a/src/components/Pivot/Pivot.scss
+++ b/src/components/Pivot/Pivot.scss
@@ -14,7 +14,6 @@
   font-weight: $ms-font-weight-regular;
   height: 30px;
   list-style-type: none;
-  overflow-x: hidden;
   white-space: nowrap;
 }
 
